split operation transformation modified.